# wraut

./: .gitignore  Cargo.toml  README.md
db_init/: wraut.db
migrations/: 0000_table_service.sql  0001_alter_service.sql  0002_alter_service_2.sql
src/: main.rs
src/modules/: mod.rs
src/modules/db/: mod.rs
src/modules/service/: html.rs  mod.rs
src/routes/: mod.rs
