[package]
name = "route_traffic"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = { version = "0.3.6" }
axum = { version = "0.8.7", features = [
  "macros",
  "multipart",
  "query"
] }
dotenv = { version = "0.15.0" }
futures = { version = "0.3.31" }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }
sqlx = { version = "0.8.5", features = [
    "runtime-tokio-native-tls",
    "sqlite",
] }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", features = [ "full" ] }
tower-http = { version = "0.6.8", features = [ "fs" ] }
tracing = { version = "0.1.43" }
tracing-appender = { version = "0.2.4" }
tracing-subscriber = { version = "0.3.19", features = [
    "ansi",
    "fmt"
] }
